--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,8 @@
 platform = espressif8266
 board = d1_mini_lite
 framework = arduino
-lib_deps = knolleary/PubSubClient@^2.8
+monitor_speed = 115200
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	tzapu/WiFiManager@^0.16.0
+	bblanchon/ArduinoJson@^6.19.4
