--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif8266
 board = d1_mini_lite
 framework = arduino
 monitor_speed = 115200
+board_build.filesystem = littlefs
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	tzapu/WiFiManager@^0.16.0
